@@ -4,6 +4,8 @@ postgresql-common (181) UNRELEASED; urgency=medium
     to use a numerical comparison on the version number.
   * pg_buildext: Fix to use a numerical comparison on the version number.
   * t/001_packages.t: PostgreSQL 10 doesn't have a separate contrib package.
+  * t/020_create_sql_remove.t: Use CREATE EXTENSION, createlang is being
+    removed.
   * Updated Danish debconf translation by Joe Dalton, thanks!
     (Closes: #856787)
 
